# CharQ

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
charq/: charq.py
src/: __init_.py
tests/: testCharAscii.py  testWordGen.py
