[metadata]
name = charq-pkg-joaorobert80
version = 0.0.1
author = João Roberto
author_email = joaorobert0@protonmail.com
description = A simple package that provides methods to get characters, numbers, random words and etc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joaoroberto50/CharQ
project_urls =
    Bug Tracker = https://github.com/joaoroberto50/CharQ/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
